modify notification service